--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -15,7 +15,7 @@
         </div>
         <div class="right">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="arsenal.html">Our Arsenal</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="contact.html">Contact</a></li>
