--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
         <div class="right">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="arsenal.html">Our Arsenal</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="/html/arsenal.html">Our Arsenal</a></li>
+                <li><a href="/html/testimonials.html">Testimonials</a></li>
+                <li><a href="/html/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
